# CAI

./: README.md  pyproject.toml
cai/: exceptions.py  log.py
cai/api/: __init__.py  base.py  client.py  flow.py  friend.py  group.py  login.py
cai/client/: __init__.py  client.py  command.py  models.py  packet.py  session.py
cai/client/config_push/: __init__.py  jce.py
cai/client/events/: __init__.py  base.py  common.py  group.py
cai/client/friendlist/: __init__.py
cai/client/heartbeat/: __init__.py
cai/client/highway/: decoders.py  encoders.py  highway.py  utils.py
cai/client/message_service/: __init__.py  command.py  decoders.py  encoders.py  models.py
cai/client/multi_msg/: __init__.py  command.py  decoders.py  forward.py  long_msg.py
cai/client/online_push/: __init__.py  decoders.py
cai/client/pkg_builder/: __init__.py  oidb.py  svc_msg.py
cai/client/sso_server/: __init__.py
cai/client/status_service/: __init__.py  command.py  jce.py
cai/client/wtlogin/: __init__.py  oicq.py  tlv.py
cai/connection/: __init__.py
cai/contrib/: __init__.py  login_resolver.py
cai/pb/highway/long_msg/: __init__.py
cai/pb/highway/multi_msg/: __init__.py
cai/pb/highway/ptt_center/: __init__.py  short_video.proto  short_video_pb2.py  short_video_pb2.pyi
cai/settings/: device.py  protocol.py
cai/storage/: __init__.py
cai/utils/: binary.py  crypto.py  dataclass.py  httpcat.py  pow.py  tea.py
cai/utils/qimei/: crypto.py  device.py  public_key.pem  request.py
examples/: friend_group.py  login.py  message.py  set_status.py
(+19 files in other folders)
